--- a/samples/android/app/build.gradle
+++ b/samples/android/app/build.gradle
@@ -137,10 +137,16 @@ android {
 }
 
 dependencies {
+    compile 'com.google.android.gms:play-services-ads:+'
     compile project(':react-native-vector-icons')
+    compile project(':RNAdMob')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.facebook.react:react-native:+'
+
+
+
+
     // From node_modules
 }
 
