--- a/samples/android/build.gradle
+++ b/samples/android/build.gradle
@@ -10,6 +10,8 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        
     }
 }
 
@@ -17,9 +19,16 @@ allprojects {
     repositories {
         mavenLocal()
         jcenter()
+        google()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
+
+         configurations.all {
+            resolutionStrategy {
+                 // react-native-admob
+                force "com.google.android.gms:play-services-ads:11.8.0"
+                }}
     }
 }
