--- a/samples/package.json
+++ b/samples/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "native-base": "^2.3.9",
     "react": "16.2.0",
-    "react-native": "0.53.0",
+    "react-native": "0.50.3",
+    "react-native-admob": "^2.0.0-beta.4",
     "react-navigation": "^1.1.2"
   },
   "devDependencies": {
