--- a/samples/android/app/build.gradle
+++ b/samples/android/app/build.gradle
@@ -143,7 +143,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.facebook.react:react-native:+'
-
+    compile project(':react-native-facebook-login')
 
 
 
