--- a/samples/package.json
+++ b/samples/package.json
@@ -11,6 +11,7 @@
     "react": "16.2.0",
     "react-native": "0.50.3",
     "react-native-admob": "^2.0.0-beta.4",
+    "react-native-facebook-login": "^1.6.1",
     "react-native-qrcode": "^0.2.6",
     "react-navigation": "^1.1.2"
   },
