--- a/samples/android/app/src/main/AndroidManifest.xml
+++ b/samples/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools" 
+          xmlns:tools="http://schemas.android.com/tools"
 
     package="com.samples"
     android:versionCode="1"
@@ -53,7 +53,7 @@
        <!--reference your fb_app_id-->
        <meta-data
                android:name="com.facebook.sdk.ApplicationId"
-               android:value="@string/fb_app_id"/>
+               android:value="@string/193705124692026"/>
 
 
     </application>
