--- a/samples/android/app/src/main/AndroidManifest.xml
+++ b/samples/android/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
        <!--reference your fb_app_id-->
        <meta-data
                android:name="com.facebook.sdk.ApplicationId"
-               android:value="@string/193705124692026"/>
+               android:value="@string/fb_app_id"/>
 
 
     </application>
