--- a/samples/package.json
+++ b/samples/package.json
@@ -10,8 +10,10 @@
     "native-base": "^2.3.9",
     "react": "16.2.0",
     "react-native": "0.53.0",
+    "react-native-camera": "^1.1.4",
     "react-native-facebook-login": "^1.6.1",
     "react-native-maps": "^0.21.0",
+    "react-native-qr-scanner": "^1.2.4",
     "react-native-qrcode": "^0.2.6",
     "react-navigation": "^1.1.2"
   },
