--- a/samples/android/app/build.gradle
+++ b/samples/android/app/build.gradle
@@ -148,6 +148,9 @@ android {
 }
 
 dependencies {
+    implementation (project(':react-native-camera')) {
+        exclude group: "com.android.support"
+    }
     implementation 'com.google.android.gms:play-services-base:+'
     implementation 'com.google.android.gms:play-services-maps:+'
 
@@ -157,6 +160,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:27.+'
     compile 'com.facebook.react:react-native:+'
     compile project(':react-native-facebook-login')
+    compile project(':RNAdMob')
+
+
 
 
 
